package exercise.ex03.ex03_3_4;

public interface Command {

    public abstract void execute();

}
